# cursed-drone

./: .gitignore  .gitmodules  ADDITIONAL_TERMS.md  CMakeLists.txt  CONTRIBUTING.md  Makefile  NOTICE.md  README.md  THIRD_PARTY_NOTICES.md
.github/: v0123.patch.gz.b64
.github/workflows/: actor-events-label-fix.yml  actor-level-label-fix.yml  actor-screen-refinement.yml  actor-tabs-refinement.yml  actor-trigger-polish.yml  android-control-wiring.yml  android.yml  apply-android-p0.yml  apply-experiment-controls.yml  apply-experiment-session.yml  apply-performance-lab.yml  apply-place-exact-ui.yml  apply-v0.12.3-hotfix-pr.yml  apply-v0.12.3-hotfix.yml  apply-v0.13.0.yml  apply-v011.yml  apply-v0111-fixes.yml  apply-v0112-direct.yml  apply-v0112-mute.yml  apply-v012-release.yml  apply-v0121.yml  apply-v07.yml  apply-v08-branding.yml  apply-v09.yml  build.yml  cleanup-v011.yml  commit-v012-source.yml  exact-fx-refinement.yml  exact-master-refinement.yml  exact-memory-refinement.yml  exact-place-snapshot.yml  experiment-build.yml  experiment-v011-build.yml  export-android-alpha3.yml  export-audit-source.yml  export-current-release.yml  export-v011-source.yml  export-v0111-source.yml  export-v012-base.yml  export-v0121-source.yml  (+9 more)
.staging/place-ui/: font.b64  place-exact.00.b64  place-exact.01.b64  snapshots.b64
.v0130/: part00  part01  part02  part03  part04  part05  part06
android/: settings.gradle
android/app/: build.gradle
android/app/src/main/: AndroidManifest.xml
android/app/src/main/cpp/: CMakeLists.txt  android_approved_main.cpp  android_main.cpp  android_touch_main.cpp  approved_ui_actor.inc  approved_ui_actor_exact.inc  approved_ui_actor_layout.inc  approved_ui_compat.inc  approved_ui_font.inc  approved_ui_font_data.hpp  approved_ui_fx_exact.inc  approved_ui_fx_memory.inc  approved_ui_master_exact.inc  approved_ui_memory_exact.inc  approved_ui_place_exact.inc  approved_ui_primitives.inc
android/app/src/main/java/design/myldy/curseddrone/: CursedDroneActivity.java
android/app/src/main/res/values/: strings.xml
assets/scales/: 12-tet.scl  19-edo.scl  just-minor.scl
build-v09/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  cursed-drone  cursed-drone-probe  cursed-drone-render  cursed-drone-sdl  cursed-drone-tests
build-v09/Testing/Temporary/: CTestCostData.txt
docs/: EXPERIMENT_BUILD_ERROR.txt  EXPERIMENT_SESSION_ERROR.txt  V07_PATCH_ERROR.txt  V09_PATCH_ERROR.txt  V09_TEST_ERROR.txt  android-approved-ui.md  android-ui-fidelity-gate.md  architecture.en.md  architecture.ru.md  effects.en.md  effects.ru.md  experiment-lab.en.md  experiment-lab.ru.md  install.android.en.md  install.android.ru.md  install.en.md  install.nextui.en.md  install.nextui.ru.md  install.ru.md  mute-root-cause.md  reference-sound.en.md  reference-sound.ru.md  release-v012-checklist.md  release-v012-plan.md  research.en.md  research.ru.md  roadmap.en.md  roadmap.ru.md  soundscapes.en.md  soundscapes.ru.md  synthesis-catalog.en.md  synthesis-catalog.ru.md  testing-macos.en.md  testing-macos.ru.md  trimui-brick.en.md  trimui-brick.ru.md  workflow.en.md  workflow.ru.md
include/cursed_drone/: audio.hpp  catalog.hpp  i18n.hpp  parameter_mapping.hpp  scala.hpp  session.hpp  wav.hpp
packaging/nextui/tg5040/Cursed Drone.pak/: README.md  launch.sh
packaging/portmaster/curseddrone/: Cursed Drone.sh  README.md  gameinfo.xml  port.json
packaging/portmaster/experiment/: Cursed Drone Lab.sh  README.md  gameinfo.xml  port.json
platform/trimui-brick/: launch.sh
scripts/: advance_actor_screen.py  apply_android_control_fixes.py  apply_android_p0.py  apply_exact_fx.py  apply_place_exact_ui.py  finalize_android_control_tests.py  fix_actor_event_rate_label.py  fix_actor_level_label.py  fix_android_cutout_override_and_tests.py  integrate_exact_master.py  integrate_exact_memory.py  polish_actor_trigger.py  refine_actor_tabs.py  refine_exact_place.py
src/: audio.cpp  bitmap_text.cpp  bitmap_text.hpp  i18n.cpp  main.cpp  plaits_actor.cpp  plaits_actor.hpp  scala.cpp  sdl_main.cpp  session.cpp  soundscape.cpp  soundscape.hpp  wav.cpp
tests/: parameter_mapping_tests.cpp  test_main.cpp
tools/: android_ui_interaction_tests.cpp  android_ui_snapshots.cpp  apply_experiment_controls.py  apply_v07_patch.py  apply_v08_branding.py  apply_v09_patch.py  device_probe.cpp  mark_nextui_verified.py  normalize_session_patch.py  normalize_v09_patch.py  package_nextui.sh  package_portmaster.sh  package_portmaster_lab.sh  patch_audio_lab.py  patch_session_lab.py  patch_tests_lab.py  patch_ui_lab.py  performance_benchmark.cpp  polish_v09_visuals.py  render_demo.cpp  v0.12.2.release-verified  v011-source.patch.gz.b64  v0111.patch.gz.b64  v0112.patch.gz.b64  v0121.patch.gz.b64  v0122.patch.00  v0122.patch.01  v0122.patch.02  v0122.patch.03  v0122.patch.04  v0122.patch.05  v0122.patch.06  v0122.patch.07  v0122.patch.08  v0122.patch.09  v0122.patch.10  v0122.patch.11  v0122.patch.12  v0122.patch.13  v0122.patch.14  (+4 more)
tools/v011parts/: 00  01  02  03  04  05  06  07  08  09  10  11  12  13  14  15
tools/v012parts/: part-00  part-01  part-02  part-03  part-04  part-050  part-051  part-052  part-053  part-054  part-055  part-0560  part-0561  part-0570  part-0571  part-0580  part-0581  part-0590a  part-0590b  part-0590c  part-0590d  part-0600  part-0601  part-0602  part-0603  part-0610  part-0611  part-0612  part-0613  part-0620
